Fix typo fotter -> footer

--- a/index.html
+++ b/index.html
@@ -51,4 +51,4 @@ layout: default
 
 <footer class="container px2 py4">
   <p class="mid-gray right-align">2014 © hokuken.inc</p>
-</fotter>
+</footer>
