--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@ layout: default
       <section class="py3">
         <h1 class="h4 italic caps">Schedule</h1>
 
-        {% assign schedules = site.data.schedules | sort: 'date' %}
+        {% assign schedules = site.data.schedules | sort: 'date' | reverse %}
         {% if schedules %}
           <table class="table-reset table-light table-condensed mb2">
             <tbody>
 
-              {% for schedule in schedules reversed | limit: 5 %}
+              {% for schedule in schedules limit: 5 %}
                 <tr>
                   <td>{{ schedule.date | date: "%Y/%-m/%-d %a" }}</td>
                   <td><a href="{{ schedule.href }}" target="_blank">{{ schedule.class_name }} <i class="fa fa-external-link"></i></a></td>
